--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "learn-from-scratch",
     "version": "1.0.0",
+    "main": "index.js",
     "dependencies": {
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
@@ -12,6 +13,10 @@
         "webpack": "^5.5.0"
     },
     "devDependencies": {
+        "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0"
+    },
+    "scripts": {
+        "build": "webpack"
     }
 }
